--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -11,6 +11,7 @@
 
 nav {
     margin: 2% 10%;
+   
 }
 
 nav>.navbar {
@@ -30,12 +31,17 @@ nav>.navbar>.box:nth-child(1)>img {
     display: none;
 }
 
+nav>.navbar>.box:nth-child(1) {
+    width: 250px;
+
+}
+
 nav>.navbar>.box>ul {
     display: flex;
     list-style: none;
     align-items: center;
     justify-content: space-between;
-    gap: 2rem;
+    /* gap: 2rem; */
     font-size: large;
     font-weight: lighter;
     font-style: normal;
@@ -104,11 +110,37 @@ nav>.navbar>.box:nth-child(3)>.count {
 }
 
 @media (max-width:986px) {
+
     /* nav>.navbar {
         justify-content: space-;
     } */
+
     nav>.navbar>.box>ul {
         display: none;
+    }
+
+    nav>.slideBar {
+        display: block;
+    }
+
+    nav>.navbar>.box>ul>li {
+        padding: 10px 30px;
+        width: 100%;
+        /* height: 100%; */
+        /* border-bottom: 1px solid rgb(0, 0, 0); */
+    }
+
+    nav>.navbar>.box>ul>li:hover::before {
+        width: 0%;
+    }
+
+    nav>.navbar>.box>ul>li:hover {
+        transform: translateY(-0px);
+    }
+
+
+    nav>.navbar>.box:nth-child(1) {
+        width: fit-content;
     }
 
     nav>.navbar>.box:nth-child(1)>img {
@@ -116,6 +148,34 @@ nav>.navbar>.box:nth-child(3)>.count {
     }
 
 }
-@media (max-width:710px) {
-    
+
+@media (max-width:750px) {
+    nav {
+        margin: 2% 6%;
+    }
 }
+
+@media (max-width:580px) {
+    nav>.navbar>.box:nth-child(3)>img:nth-child(1) {
+        display: none;
+    }
+
+    nav>.navbar>.box:nth-child(3) {
+        gap: 15px;
+    }
+}
+
+@media (max-width:420px) {
+    nav>.navbar>.box:nth-child(3)>.count {
+        width: 20px;
+        height: 22px;
+        text-align: center;
+    }
+
+    nav>.navbar>.box:nth-child(2)>h1 {
+        font-size: 20px;
+    }
+
+}
+
+/* @media (max-width:) {} */
