--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,55 +1,98 @@
-
-
 :root {
-    --navcolor: #FAFAFA;
+    --navcolor: #fafafaaa;
     --count: #FFA52F;
-}.sidebar {
-    position: fixed; /* stays on screen */
+}
+
+.sidebar {
+     font-family: "Roboto", sans-serif;
+    position: fixed;
+    /* stays on screen */
     top: 0;
     left: 0;
     height: 100vh;
-    width: 300px; /* adjust as needed */
-    transform: translateX(-100%); /* hidden */
+    width: 100vw;
+    /* adjust as needed */
+    transform: translateX(-100%);
+    /* hidden */
+    /* background-color: rgba(0, 0, 0, 0.111); */
     transition: transform 0.6s ease-in-out;
     z-index: 1000;
 }
 
 .sidebar.open {
-    transform: translateX(0); /* slide in */
+
+    
+    transform: translateX(0);
 }
 
 .sidebar .listOf {
-    width: 100%;
-    height: 100%;
-    background-color: var(--navcolor);
+    width: 50vw; /* 100vw/10 */
+
+    height: 100vh;
+    background-color: white;
     padding: 10px 30px;
     position: relative;
     border-radius: 0 20px 20px 0;
 }
-.sidebar > .listOf > .close{
+
+.sidebar>.listOf>.close {
     position: absolute;
     top: 5%;
     right: 5%;
     font-size: 2rem;
     cursor: pointer;
+    /* animation: rotate 1s ease-in-out forwards; */
+    /* background-color: red; */
 }
 
-.sidebar > .listOf > .orderList{
+.sidebar>.listOf>.orderList {
     width: 100%;
     height: 100%;
     display: flex;
     /* flex-direction: column; */
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     font-size: 2rem;
+    
     text-transform: capitalize;
 
 }
-.sidebar > .listOf > .orderList > ul{
+
+.sidebar>.listOf>.orderList>ul {
     list-style: none;
     display: flex;
     height: 100%;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: start;
+}
+.sidebar>.listOf>.orderList>ul > li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.sidebar>.listOf>.orderList>ul > li > img{
+    object-fit: contain;
+}
+@media (max-width:500px) {
+    .sidebar>.listOf>.orderList {
+        font-size: 1.5rem;
+    }
+    .sidebar .listOf {
+     
+        width: 50%;
+    }
+}
+
+@media (max-width:400px) {
+    .sidebar .listOf {
+        padding-right: 10px;
+        padding-left: 10px;
+        width: 60%;
+    }
+
+    .sidebar>.listOf>.orderList {
+        font-size: 1.5rem;
+    }
 }
