--- a/src/HeroSection/HeroSection.css
+++ b/src/HeroSection/HeroSection.css
@@ -9,10 +9,12 @@
     text-align: center;
     margin: 0px 10%;
 
-    height: 100vh;
+    height: fit-content;
     font-family: var(--font2);
 
+    margin-top: 5rem;
     /* overflow: hidden; */
+    margin-bottom: 15rem;
 }
 
 .Outer>h1 {
@@ -21,6 +23,8 @@
     font-size: 5.5em;
     text-transform: uppercase;
     font-weight: bolder;
+    font-family: "Boldonse", system-ui;
+    /* letter-spacing: 1rem; */
 }
 
 .Outer>h1>span {
@@ -136,6 +140,7 @@
     height: 100%;
     align-items: center;
     font-size: 1.2rem;
+    /* text-transform: uppercase; */
     /* flex-direction: column; */
 
 }
@@ -244,15 +249,17 @@
 
     }
 }
+
 @media (min-width:943px) {
-      .Outer>.main>.sideContent {
+    .Outer>.main>.sideContent {
         top: 30%;
-      }
-    
+    }
+
     .Outer>.main:hover>.sideContent {
         transform: translate(0px, 30px);
     }
 }
+
 @media (max-width:925px) {
     .Outer>.main>.content>h1 {
         font-size: 2.5rem;
@@ -322,10 +329,22 @@
 
 }
 
+@media (max-width:665px) {
+    .Outer>h1 {
+        letter-spacing: 0px;
+    }
+}
+
+@media (max-width:577px) {
+    .Outer>h1 {
+        font-size: 3rem;
+    }
+}
 
 @media (max-width:530px) {
     .Outer {
-        margin: 0px 5%;
+        margin: 3rem 5%;
+        margin-bottom: 30%;
     }
 
     .Outer>.main>.sideContent {
@@ -407,7 +426,7 @@
 @media (max-width:469px) {
     .Outer>h1 {
 
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     .Outer>.main>.sideContent {
@@ -418,9 +437,12 @@
         transform: translate(0px, 40px);
         /* background-color: red; */
     }
+
+
 }
+
 @media (max-width:400px) {
-     .Outer>.main:hover>.sideContent {
+    .Outer>.main:hover>.sideContent {
         transform: translate(0px, 50px);
         /* background-color: red; */
     }
@@ -461,7 +483,8 @@
     .Outer>.main>.sideContent>p {
         font-size: 0.8rem;
     }
-     .Outer>.main:hover>.sideContent {
+
+    .Outer>.main:hover>.sideContent {
         transform: translate(0px, 55px);
         /* background-color: red; */
     }
