--- a/src/Categories/categories.css
+++ b/src/Categories/categories.css
@@ -14,11 +14,12 @@
 }
 
 .outerLayer>.innerLayer {
-    margin: 10% 5%;
+    margin: 10% 0%;
 
-    height: 700px;
-    padding: 2% 3%;
+    height: 900px;
+    padding: 2% 0%;
     overflow: hidden;
+    position: relative;
 
 }
 
@@ -32,6 +33,7 @@
     letter-spacing: 0.8rem;
     font-family: var(--BoldFont);
     margin-top: 1%;
+    padding: 0px 5%;
 }
 
 .outerLayer>.innerLayer>.heading>.navigation {
@@ -43,8 +45,8 @@
 }
 
 .outerLayer>.innerLayer>.heading>.navigation>button {
-    width: 40px;
-    height: 30px;
+    width: 50px;
+    height: 40px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -54,14 +56,17 @@
 .outerLayer>.innerLayer>.items {
     scroll-behavior: smooth;
 
-    width: 100%;
-    overflow-x: scroll;
+    width: 100vw;
+    overflow: hidden;
 
     height: 100%;
+
+
     /* background-color: red; */
+    padding: 0px 2%;
     display: flex;
-    align-items: end;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
 
 }
 
@@ -69,73 +74,493 @@
     display: none;
 }
 
-.outerLayer>.innerLayer>.items::scroll-button(right) {
+/* .outerLayer>.innerLayer>.items::scroll-button(right) {
     content: ">";
-    width: 40px;
-    height: 30px;
+    width: 50px;
+    height: 40px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-left: 20px;
-    background-color: red
 
+    position: absolute;
+    top: 11%;
+    right: 1.2%;
 }
 
 .outerLayer>.innerLayer>.items::scroll-button(left) {
     content: "<";
-    width: 40px;
-    height: 30px;
+    width: 50px;
+    height: 40px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
+    position: absolute;
+    top: 11%;
+    right: 5%;
+} */
 
 .outerLayer>.innerLayer>.items>.products {
-    /* width: 500px; */
-    height: 100%;
+    width: 690px;
+    padding: 20px;
+    height: 690px;
+    /* background-color: #E7E7E3; */
+    /* background-color: rgb(255, 0, 0); */
+    height: fit-content;
     flex: 0 0 20em;
-    /* background-color: red;
-     */
-     margin-left: 20px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    justify-content: space-between;
 
 }
-.outerLayer>.innerLayer>.items>.products>img{
-   width: 100%;
-   height: 300px;
-   object-fit: cover;
-    /* background-color: red */
+
+.outerLayer>.innerLayer>.items>.products>.details {
+    color: #FFFFFF;
+    padding: 20px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+    h2 {
+        text-transform: uppercase;
+        letter-spacing: 5px;
+    }
+
+    button {
+        width: 40px;
+        height: 40px;
+        background-color: #000000;
+        box-shadow: none;
+        border: none;
+        background-color: white;
+        cursor: pointer;
+        color: rgb(0, 0, 0);
+    }
+}
+
+.outerLayer>.innerLayer>.items>.products>img {
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
+    overflow: hidden;
+
+}
+
+@media (max-width:1936px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: 590px;
+        /* background-color: red; */
+        padding: 20px;
+        height: 690px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        justify-content: space-evenly;
+
+    }
+}
+
+@media (max-width:1844px) {
+
+    /* .outerLayer>.innerLayer>.items{
+        padding: 0%;
+    } */
+    .outerLayer>.innerLayer>.items>.products {
+        width: fit-content;
+
+        /* margin: 60px; */
+        img {
+            width: 500px;
+            height: 690px;
+        }
+    }
+}
+
+@media (max-width:1680px) {
+
+
+    .outerLayer>.innerLayer>.items>.products {
+        width: fit-content;
+
+        /* margin: 60px; */
+        img {
+            width: 450px;
+            height: 690px;
+            object-fit: cover;
+        }
+    }
+}
+
+@media (max-width:1512px) {
+    .outerLayer>.innerLayer>.items::scroll-button(right) {
+
+        top: 11%;
+        right: 5.2%;
+    }
+
+    .outerLayer>.innerLayer>.items::scroll-button(left) {
+
+        top: 11%;
+        right: 10%;
+    }
+}
+
+@media (max-width:1505px) {
+    .outerLayer>.innerLayer>.items {
+
+        padding: 0%;
+    }
+
+    .outerLayer>.innerLayer>.items>.products {
+        width: 100%;
+        height: 80%;
+        padding: 0%;
+
+        /* margin: 60px; */
+        img {
+            width: 420px;
+            height: 690px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:1505px) {
+    .outerLayer>.innerLayer>.items {
+
+        padding: 0%;
+    }
+
+    .outerLayer>.innerLayer>.items>.products {
+        width: 100%;
+        height: 80%;
+        padding: 0%;
+
+        /* margin: 60px; */
+        img {
+            width: 390px;
+            height: 690px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:1260px) {
+    .outerLayer>.innerLayer>.items::scroll-button(right) {
+
+        top: 5%;
+        right: 6%;
+    }
+
+    .outerLayer>.innerLayer>.items::scroll-button(left) {
+
+        top: 5%;
+        right: 15%;
+    }
+}
+
+@media (max-width:1217px) {
+    .outerLayer>.innerLayer>.items {
+
+        padding: 0%;
+    }
+
+    .outerLayer>.innerLayer>.items>.products {
+        width: 100%;
+        height: 80%;
+        padding: 0%;
+
+        /* margin: 60px; */
+        img {
+            width: 350px;
+            height: 490px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:1100px) {
+    .outerLayer>.innerLayer>.items {
+
+        padding: 0%;
+    }
+
+    .outerLayer>.innerLayer>.items>.products {
+        width: 100%;
+        height: 80%;
+        padding: 0%;
+
+        /* margin: 60px; */
+        img {
+            width: 320px;
+            height: 450px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:1000px) {
+    .outerLayer>.innerLayer>.items {
+
+        padding: 0%;
+    }
+
+    .outerLayer>.innerLayer>.items>.products {
+        width: 100%;
+        height: 80%;
+        padding: 0%;
+
+        /* margin: 60px; */
+        img {
+            width: 300px;
+            height: 450px;
+            object-fit: fill;
+        }
+    }
+}
+
+
+
+
+@media (max-width:960px) {
+    .outerLayer>.innerLayer>.items {
+
+        padding: 0%;
+    }
+
+    .outerLayer>.innerLayer>.items>.products {
+        width: fit-content;
+        height: 80%;
+        padding: 0%;
+
+        /* margin: 60px; */
+        img {
+            width: 290px;
+            height: 400px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:955px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: 50%;
+        height: 80%;
+        padding: 0%;
+        margin: 15px;
+
+        img {
+            width: 445px;
+            height: 550px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:946px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: 600px;
+        /* background-color: red; */
+        height: 80%;
+        padding: 0%;
+        margin: 15px;
+        margin: 1%;
+
+        img {
+            width: 450px;
+            height: 550px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:935px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: 600px;
+        /* background-color: red; */
+        height: 80%;
+        padding: 0%;
+        margin: 15px;
+        margin: 1%;
+
+        img {
+            width: 400px;
+            height: 550px;
+            object-fit: fill;
+        }
+    }
 }
 
 @media (max-width:882px) {
-    .outerLayer>.innerLayer>.heading > h1{
+    .outerLayer>.innerLayer>.heading>h1 {
         font-size: 2rem;
+    }
+}
+
+@media (max-width:628px) {
+    .outerLayer>.innerLayer>.items::scroll-button(right) {
+        height: 30px;
+        top: 2%;
+        right: 4%;
+    }
+
+    .outerLayer>.innerLayer>.items::scroll-button(left) {
+        height: 30px;
+        top: 2%;
+        right: 15%;
+    }
+}
+
+@media (max-width:832px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: 600px;
+        /* background-color: red; */
+        height: 80%;
+        padding: 0%;
+        margin: 15px;
+        margin: 1%;
+
+        img {
+            width: 380px;
+            height: 550px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:791px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: 600px;
+        /* background-color: red; */
+        height: 80%;
+        padding: 0%;
+        margin: 15px;
+        margin: 1%;
+
+        img {
+            width: 350px;
+            height: 450px;
+            object-fit: fill;
+        }
+    }
+}
+
+@media (max-width:729px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: fit-content;
+        /* background-color: red; */
+        height: 80%;
+        padding: 0%;
+        margin: 15px;
+        margin: 1%;
+
+        img {
+            width: 300px;
+            height: 400px;
+            object-fit: fill;
+        }
+    }
+}
+@media (max-width:665px) {
+    .outerLayer>.innerLayer>.items>.products {
+        width: 100%;
+        /* background-color: red; */
+        height: 80%;
+        padding: 0%;
+        margin: 15px;
+        margin-left: 1%;
+
+        img {
+            width: 280px;
+            height: 400px;
+            object-fit: fill;
+        }
     }
 }
 
 @media (max-width:590px) {
 
-    .outerLayer>.innerLayer>.heading{
+    .outerLayer>.innerLayer>.heading {
         justify-content: space-between;
     }
-    .outerLayer>.innerLayer>.heading > h1{
+
+    .outerLayer>.innerLayer>.heading>h1 {
         font-size: 1rem;
+    }
+}
+
+@media (max-width:510px) {
+    .outerLayer>.innerLayer>.items::scroll-button(right) {
+        height: 30px;
+        top: 2%;
+        right: 4%;
+    }
+
+    .outerLayer>.innerLayer>.items::scroll-button(left) {
+        height: 30px;
+        top: 2%;
+        right: 18%;
+    }
+}
+
+@media (max-width:420px) {
+    .outerLayer>.innerLayer>.items::scroll-button(right) {
+        height: 30px;
+        top: 2%;
+        right: 1%;
+    }
+
+    .outerLayer>.innerLayer>.items::scroll-button(left) {
+        height: 30px;
+        top: 2%;
+        right: 18%;
+    }
+}
+
+@media (max-width:400px) {
+    .outerLayer>.innerLayer>.items::scroll-button(right) {
+        height: 30px;
+        top: 6%;
+        right: 1%;
+    }
+
+    .outerLayer>.innerLayer>.items::scroll-button(left) {
+        height: 30px;
+        top: 6%;
+        right: 18%;
     }
 }
 
 @media (max-width:410px) {
 
-    .outerLayer>.innerLayer>.heading{
+    .outerLayer>.innerLayer>.heading {
         justify-content: space-between;
         margin-top: 10%;
     }
-    .outerLayer>.innerLayer>.heading > h1{
+
+    .outerLayer>.innerLayer>.heading>h1 {
         font-size: 1rem;
         letter-spacing: 2px;
     }
-    .outerLayer>.innerLayer>.heading > .navigation > button{
+
+    .outerLayer>.innerLayer>.heading>.navigation>button {
         height: 10%;
+    }
+}
+
+@media (max-width:345px) {
+    .outerLayer>.innerLayer>.items::scroll-button(right) {
+        height: 30px;
+        top: 6%;
+        right: 1%;
+    }
+
+    .outerLayer>.innerLayer>.items::scroll-button(left) {
+        height: 30px;
+        top: 6%;
+        right: 20%;
     }
 }
