--- a/src/NewDrop/NewDrop.css
+++ b/src/NewDrop/NewDrop.css
@@ -123,8 +123,8 @@
     text-transform: capitalize;
 }
 .NewOuter>.NewInner>.NewInnerMost>.NewDrops>.prodCard>.badge.Hot{
-    background-color: rgba(255, 0, 0, 0.787);
-    color: #FFA52F;
+    background-color: var(--yello);
+    color:white;
     font-weight: bolder;
     font-size: 0.8rem;
 }
